--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="mt-5">
                              <i class="fas fa-4x fa-bullhorn text-primary mb-4"></i>
                             <h3 class="h4 mb-2">UX Research</h3>
-                            <p class="text-muted mb-0">Collect user views with a range of tools and methods.
+                            <p class="text-muted mb-0">Collect user experience views with a range of tools and methods.
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">User Experience Research</h3></div>
+                                <h3 class="h4 mb-2">UX Research</h3></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
