--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Inspired Simplicity</h2>
+                        <h2 class="text-white mt-0">Established 2002</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">We combine clarity, simplicity, depth and insight to deliver innovative solutions.</p>
+                        <p class="text-white-50 mb-4">We use traditional research techniques combined with modern data analysis and visualisation tools such as Jupyter Notebooks.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find out more</a>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" href="tips.html"
+                            <a class="portfolio-link" href="https://getheard.quarto.pub/tips/"
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
@@ -157,7 +157,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Sound Classifier</h3>
+                                <h3 class="h4 mb-2">Sound Classification</h3>
 			</div>
                         </div>
                     </div>
