--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">UX Research</h3></div>
+                                <h3 class="h4 mb-2">Focus Groups</h3></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
