--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Charity Dashboard</h3>
+                                <h3 class="h4 mb-2">Charity Data App</h3>
 			</div>
                         </div>
                     </div>
