--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Restaurant Dashboard</h3>
+                                <h3 class="h4 mb-2">Dashboards</h3>
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Predicting Heart Disease</h3>
+                                <h3 class="h4 mb-2">Machine Learning</h3>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                               	<h3 class="h4 mb-2">Diamond Price Model</h3>
+                               	<h3 class="h4 mb-2">Regression</h3>
 			</div>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Sound Classification</h3>
+                                <h3 class="h4 mb-2">Deep Learning</h3>
 			</div>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Focus Groups</h3></div>
+                                <h3 class="h4 mb-2">User Experience</h3></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -181,7 +181,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Charity Data App</h3>
+                                <h3 class="h4 mb-2">Apps</h3>
 			</div>
                         </div>
                     </div>
