--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class='fas fa-4x fa-laptop-code text-primary mb-4'></i>
+                            <i class='fas fa-4x fa-bar=chart text-primary mb-4'></i>
                             <h3 class="h4 mb-2">Data Analysis</h3>
                             <p class="text-muted mb-0">Analyse and visualise your data for new insights.
 </p>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Deep Learning</h3>
                             <p class="text-muted mb-0">Unlock the power of artificial neural networks.</p>
                         </div>
