--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Classification>/h3>
+                                <h3 class="h4 mb-2">Classification</h3>
                             </div>
                         </div>
                     </div>
