--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Data Science Solutions"/>
+        <meta name="description" content="Data Solutions"/>
         <meta name="author" content="" />
         <title>Data Science Solutions</title>
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
