--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <hr class="divider my-4"/>
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-medium mb-5">With expertise in all aspects of machine learning and data science we can help you make sense of a complex world.</p>
+                        <p class="text-white-75 font-weight-medium mb-5">With expertise in all aspects of data analysis and data science we can help you make sense of a complex world.</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
                     </div>
                 </div>
